--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,19 @@ jobs:
         run: npm ci
       - name: run test
         run: npm test  
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+      - name: install nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: install dependencies
+        run: npm ci 
+      - name: build
+        run: npm build
+      - name: deploy
+        run: echo "Deploying....."
+        
