--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: install dependencies
         run: npm ci 
       - name: build
-        run: npm build
+        run: npm run build
       - name: deploy
         run: echo "Deploying....."
         
