--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
       - name: run test
         run: npm test  
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: get code
