--- a/.github/workflows/activitytypes.yml
+++ b/.github/workflows/activitytypes.yml
@@ -7,7 +7,7 @@ on:
       - main
   push:
     branches:
-      - main
+      - master
       - dev
     paths-ignore:
       - '.github/workflows/*'
