--- a/.github/workflows/gh-data.yml
+++ b/.github/workflows/gh-data.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name:  get code
         uses: actions/checkout@v3
+      - name: cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: '~/npm'
+          key: ${{ runner.os}}-${{ hashFiles('package-lock.json')}}  
       - name: install dependencies
         run: npm ci
       - name: test code
@@ -21,6 +26,11 @@ jobs:
     steps:
       - name: get code
         uses: actions/checkout@v3
+      - name: cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: '~/npm'
+          key: ${{ runner.os}}-${{ hashFiles('package-lock.json')}}  
       - name: install dependencies
         run: npm ci
       - name: build code
