--- a/.github/workflows/gh-data.yml
+++ b/.github/workflows/gh-data.yml
@@ -12,7 +12,7 @@ jobs:
       - name: cache dependencies
         uses: actions/cache@v3
         with:
-          path: '~/npm'
+          path: '~/.npm'
           key: ${{ runner.os}}-${{ hashFiles('package-lock.json')}}  
       - name: install dependencies
         run: npm ci
