added env job level

--- a/.github/workflows/gh-data.yml
+++ b/.github/workflows/gh-data.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm ci
       - name: test code
         run: npm run test
+      - name: Before build
+        run: ${{ env.JOb_NAME }}
   build:
     needs: test
     runs-on: ubuntu-latest
