added env job level 2

--- a/.github/workflows/gh-data.yml
+++ b/.github/workflows/gh-data.yml
@@ -23,7 +23,7 @@ jobs:
       - name: test code
         run: npm run test
       - name: Before build
-        run: ${{ env.JOb_NAME }}
+        run: ${{ env.JOB_NAME }}
   build:
     needs: test
     runs-on: ubuntu-latest
