--- a/.github/workflows/gh-data.yml
+++ b/.github/workflows/gh-data.yml
@@ -67,3 +67,4 @@ jobs:
           echo "Artifacts are ready"      
           echo ${{ env.JOB_NAME }}
           echo ${{ env.WORKFLOW_NAME }}
+          echo ${{ secrets.TEST_NAME }}
