--- a/.github/workflows/activitytypes.yml
+++ b/.github/workflows/activitytypes.yml
@@ -13,6 +13,7 @@ on:
       - '.github/workflows/*'
 jobs:
   test:
+    environment: test
     runs-on: ubuntu-latest
     steps:
       - name: message
